Use straight.el
Also disable the build since it doesn't work and I am not going to fix
it right now.

--- a/.build.yml
+++ b/.build.yml
@@ -1,13 +1,13 @@
-image: archlinux
-environment:
-  EMACS_TRUST_SML_THEMES: t
-  EMACS_TRUST_THEMES: t
-packages:
-  - emacs
-  - python3
-sources:
-  - https://git.sr.ht/~hristoast/dot-emacs
-tasks:
-  - test-startup: |
-      cd ./dot-emacs
-      ./test-startup.py || exit 1
+# image: archlinux
+# environment:
+#   EMACS_TRUST_SML_THEMES: t
+#   EMACS_TRUST_THEMES: t
+# packages:
+#   - emacs
+#   - python3
+# sources:
+#   - https://git.sr.ht/~hristoast/dot-emacs
+# tasks:
+#   - test-startup: |
+#       cd ./dot-emacs
+#       ./test-startup.py || exit 1
